<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_search">

    <com.google.android.material.search.SearchView
        android:id="@+id/searchview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/search"
        app:layout_anchor="@id/toolbar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </com.google.android.material.search.SearchView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/barlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.search.SearchBar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            app:defaultMarginsEnabled="true"
            app:hideNavigationIcon="false"
            app:layout_scrollFlags="exitUntilCollapsed"
            app:navigationIcon="@drawable/end" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_weight="1"
        android:transitionName="edit"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:id="@+id/xxbj1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lishijilu"
                    android:textColor="@color/text"
                    android:textSize="26sp" />

                <ImageView
                    android:id="@+id/deleat"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="10dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/deleat"
                    android:src="@drawable/delete"
                    app:tint="@color/text" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/search_fragment"
            android:name="com.muqingbfq.fragment.search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:layout="@layout/fragment_search" />
    </RelativeLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_db"
        android:name="com.muqingbfq.fragment.bfq_db"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
        tools:layout="@layout/fragment_bfq_db" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
